--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,24 @@
         <span class="text-md font-medium">Analista</span>
     </header>
 
+    <!-- Navigation Bar -->
+  <nav class="bg-white shadow px-6 py-4 flex items-center justify-between">
+    <button class="text-gray-700 font-semibold px-4 py-2 rounded hover:bg-gray-100">
+      ☰ Menu
+    </button>
+    <div class="flex space-x-4 absolute left-1/2 transform -translate-x-1/2">
+      <a href="{% url 'historicoAnalises' %}" class="{% if paginaAtiva == 'historicoAnalises' %}bg-green-200 text-green-800 font-bold px-3 py-1 rounded {% else %}font-semibold hover:underline{% endif %} px-3 py-1 rounded hover:underline">
+        Análises
+      </a>
+      <a href="{% url 'CadastrarAnalise' %}" class="{% if paginaAtiva == 'cadastrarAnalise' %}bg-green-200 text-green-800 font-bold px-3 py-1 rounded {% else %}font-semibold hover:underline{% endif %} px-3 py-1 rounded hover:underline">
+        Nova Análise
+      </a>
+      <a href="{% url 'relatorios' %}" class="{% if paginaAtiva == 'relatorios' %}bg-green-200 text-green-800 font-bold px-3 py-1 rounded {% else %}font-semibold hover:underline{% endif %} px-3 py-1 rounded hover:underline">
+        Relatórios
+      </a>
+    </div>
+  </nav>
+
     {% block 'body' %}{% endblock 'body' %}
 </body>
 </html>
