Aba de relatórios v1

--- a/analises/templates/app/cadastro_umidade.html
+++ b/analises/templates/app/cadastro_umidade.html
@@ -1,4 +1,4 @@
-{% extends "app/base.html" %}
+{% extends "base.html" %}
 {% block content %}
 <h2>Nova Análise de Umidade</h2>
 <form method="post">
