--- a/analises/templates/app/lista_umidade.html
+++ b/analises/templates/app/lista_umidade.html
@@ -1,4 +1,4 @@
-{% extends "app/base.html" %}
+{% extends "base.html" %}
 {% block content %}
 <h2>Lista de Análises de Umidade</h2>
 <table class="table table-striped">
