--- a/analises/templates/app/cadastro_proteina.html
+++ b/analises/templates/app/cadastro_proteina.html
@@ -1,4 +1,4 @@
-{% extends "app/base.html" %}
+{% extends "base.html" %}
 {% block content %}
 <h2>Nova Análise de Proteína</h2>
 <form method="post">
