--- a/analises/templates/base.html
+++ b/analises/templates/base.html
@@ -70,6 +70,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'proteina_create' %}"> Cadastrar Proteina</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'listar_relatorios' %}"> Relatórios</a>
+                </li> 
             </ul>
         </div>
     </div>
